# app/Models/Employee.php
@@ -37,14 +37,10 @@ class Employee extends Model
         return $this->hasMany(Order::class);
     }
 
-    // public static function searchByName($searchTerm)
-    // {
-    //     return self::where('name', 'like', '%' . $searchTerm . '%')
-    //         ->orWhereHas('service', function ($query) use ($searchTerm) {
-    //             $query->where('name', 'like', '%' . $searchTerm . '%');
-    //         })
-    //         ->get();
-    // }
+    public function feedbacks()
+    {
+        return $this->hasMany(Feedback::class);
+    }
 
 
 
